--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-students={"mike":1}
-server.port=8086
+student.ages={"mike":1}
+server.port=8087
